# admin-panel-adaptive

./: .env.example  .gitignore  README.md  local_db_setup.py  pyproject.toml
app/: auth.py  auth_router.py  config.py  database.py  main.py  models.py
app/audit_log/: router.py
app/branding/: __init__.py  router.py
app/common/: __init__.py  entity_ops.py
app/config_matrix/: __init__.py  router.py
app/customer_notes/: __init__.py  router.py
app/customers/: __init__.py  router.py
app/db_schema/: __init__.py  router.py
app/preset_configs/: __init__.py  router.py
app/schemas/: __init__.py  config.py
docs/: improvement_baseline.md
scripts/: create_admin_user.py  local_db_setup.py
statics/: custom.css
templates/: audit_log.html  config_matrix.html  customer_detail.html  customers.html  dev_database.html  layout.html  login.html  preset_config_detail.html  preset_configs.html
